fix(styles): fix code-group horizontal margin on mobile

--- a/packages/theme/src/client/theme-default/styles/components/ns-doc.css
+++ b/packages/theme/src/client/theme-default/styles/components/ns-doc.css
@@ -197,6 +197,10 @@
   border-radius: 10px;
 }
 
+.ns-doc .custom-block .vp-code-group div[class*='language-'] {
+  margin: 0 !important;
+}
+
 /**
  * Code
  * -------------------------------------------------------------------------- */
